<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDark"
    android:id="@+id/signin_Layout"
    tools:context=".LoginAct">



    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/app_logo"
        android:contentDescription="@string/app_name"/>


    <EditText
        android:id="@+id/emailText"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:background="@drawable/textwhitebox"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="10dp"
        android:autofillHints="@string/prompt_email"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="10dp"
        android:background="@drawable/textwhitebox"
        android:hint="@string/prompt_password"
        android:autofillHints="@string/prompt_password"
        tools:targetApi="o"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/signinbox"
        android:text="@string/action_sign_in"
        android:textAlignment="center"
        android:paddingBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:paddingTop="8dp">

        <View
            android:id="@+id/divider"
            android:layout_width="160dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/background_light" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/maven_pro_medium"
            android:gravity="top"
            android:text="OR"
            android:textAlignment="gravity"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />
        <View
            android:layout_width="160dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/background_light" />

    </LinearLayout>




        <com.google.android.gms.common.SignInButton
            android:id="@+id/gSignInButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/GSign"
            android:textColor="@android:color/white"
            />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/SignoutBtn"/>


</LinearLayout>